--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+*.env
 
 # Metro
 .metro-health-check*
@@ -28,6 +29,7 @@ yarn-error.*
 
 # macOS
 .DS_Store
+._*
 *.pem
 
 # local env files
